--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="max-width">
             <div data-aos="fade-left" data-aos-delay="600" class="home-content">
                 <div class="text-2"> Welcome to Mark Vil's Portfolio </div>
-                <div class="text-3">And I'm a Web developer<span></span></div><!-- class="typing" -->
+                <div class="text-3">I'm a Web developer<span></span></div><!-- class="typing" -->
 
             </div>
             <!-- <div  class="social-menu">
